--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.1'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'java-library'
+    id 'org.springframework.boot' version '3.4.1' apply false
+    id 'io.spring.dependency-management' version '1.1.7' apply false
 }
-
-group = 'com.f1v3.demo'
-version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
@@ -13,16 +11,44 @@ java {
     }
 }
 
-repositories {
-    mavenCentral()
+
+allprojects {
+
+    group = 'com.f1v3.demo'
+    version = '0.0.1-SNAPSHOT'
+
+    repositories {
+        mavenCentral()
+    }
 }
 
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+subprojects {
 
-tasks.named('test') {
-    useJUnitPlatform()
+    apply {
+        plugin 'java'
+        plugin 'java-library'
+        plugin 'io.spring.dependency-management'
+        plugin 'org.springframework.boot'
+    }
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+    dependencies {
+
+        // lombok
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+
+        // test
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    }
+
+    tasks.named('test') {
+        useJUnitPlatform()
+    }
+
 }
