chore: gradle setting

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,17 @@
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == "org.springframework.boot") {
+                useVersion(springBootVersion)
+            }
+
+            if (requested.id.id == "io.spring.dependency-management") {
+                useVersion(springDependencyManagementVersion)
+            }
+        }
+    }
+}
+
 rootProject.name = 'multi-module'
 
 include(
