--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
     id 'java-library'
-    id 'org.springframework.boot' version '3.4.1' apply false
-    id 'io.spring.dependency-management' version '1.1.7' apply false
+    id 'org.springframework.boot' apply false
+    id 'io.spring.dependency-management' apply false
 }
 
 java {
@@ -14,8 +14,8 @@ java {
 
 allprojects {
 
-    group = 'com.f1v3.demo'
-    version = '0.0.1-SNAPSHOT'
+    group = projectGroup
+    version = applicationVersion
 
     repositories {
         mavenCentral()
@@ -47,8 +47,16 @@ subprojects {
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
 
+
+    tasks.named('bootJar') {
+        enabled = false
+    }
+
+    tasks.named('jar') {
+        enabled = true
+    }
+
     tasks.named('test') {
         useJUnitPlatform()
     }
-
 }
