feat: database module

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ javaVersion=17
 ### Spring Dependencies ###
 springBootVersion=3.4.1
 springDependencyManagementVersion=1.1.7
-
+springCloudVersion=2024.0.0
