--- a/storage/db-main/build.gradle
+++ b/storage/db-main/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     // module
+    implementation project(':domain')
 
     // database
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
