--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
 ### Application Version ###
-applicationVersion=0.0.1
+applicationVersion=0.0.1-SNAPSHOT
 
 ### Project Configs ###
 projectGroup=com.f1v3.demo
-
-### Project Dependencies ###
 javaVersion=21
 
 ### Spring Dependencies ###
